# hackathon-1

./: .gitignore  .pylintrc  .vercelignore  RATE_LIMIT_SOLUTION.md  README.md  RUNNING_CHATBOT.md  SOLUTION.md  VERCEL_DEPLOYMENT.md  VERCEL_ENV.md  check_attrs.py  check_qdrant.py  pyproject.toml  test-chat-fix.js  test_api.py  test_pipeline_integration.py  test_qdrant_local.py  test_sample_processing.py  vercel.json
.claude/: settings.local.json
api/: chat.js
docs/: docusaurus.config.js  docusaurus.config.vercel.js  jsconfig.json  package-lock.json  sidebars.js  tsconfig.json
docs/docs/capstone/: index.md
docs/docs/intro/: index.md  overview.md
docs/docs/module-1-ros-nervous-system/: index.md  package-structure.md
docs/docs/module-2-digital-twin/: index.md  urdf-modeling.md
docs/docs/module-3-ai-robot-brain/: index.md
docs/docs/module-4-vision-language-action/: index.md
docs/src/components/: HomepageFeatures.js
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/src/utils/: backendConfig.js
docs/static/: .gitkeep
docs/static/img/: .gitkeep
docs/static/js/: config-injector.js
history/prompts/1-rag-book-embeddings/: 1-rag-book-embeddings-spec.spec.prompt.md  2-rag-book-embeddings-plan.plan.prompt.md  3-rag-book-embeddings-tasks.tasks.prompt.md
history/prompts/agent-backend-api/: 1-agent-backend-api-spec.spec.prompt.md  2-agent-backend-api-plan.plan.prompt.md  3-agent-backend-api-tasks.tasks.prompt.md  3-fix-fastapi-request-parameter-bug.red.prompt.md  4-agent-backend-api-implementation.green.prompt.md
history/prompts/constitution/: 1-create-physical-ai-humanoid.constitution.prompt.md
history/prompts/frontend-backend-integration/: 1-frontend-backend-integration-spec.spec.prompt.md  2-frontend-backend-integration-plan.plan.prompt.md  2-update-backend-url-deployment.implementation.prompt.md  3-frontend-backend-integration-tasks.tasks.prompt.md
history/prompts/general/: 001-implement-huggingface-backend-integration.general.prompt.md  1-fix-docusaurus-module-resolution-errors.general.prompt.md  (+4 more)
qdrant_data/: meta.json
ros_packages/ai_bridge/: package.xml  setup.py
ros_packages/perception/: package.xml  setup.py
ros_packages/planning/: package.xml  setup.py
ros_packages/robot_control/: package.xml  setup.py
ros_packages/voice_control/: package.xml  setup.py
specs/1-physical-ai-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-book-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-agent-backend-api/: data-model.md  limitations.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/4-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/rag_pipeline/: config.py
src/rag_pipeline/api/: main.py  (+3 more)
tests/fixtures/: sample-responses.json
tests/integration/: chat-integration.test.tsx
tests/unit/: ChatWidget.test.tsx
(+59 files in other folders)
